tests/integration/fail/records/merge_different_vals_both_force.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'EvalError::MergeIncompatibleArgs'
({ a | force = false } & { a | force = true }).a